Fix vertical spacing in blurbs on About page

--- a/_scss/components/_blurbs.scss
+++ b/_scss/components/_blurbs.scss
@@ -48,7 +48,7 @@
 
   &.right {
     position: relative;
-    top: 3px;
+    top: 12px;
   }
 }
 
